--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,14 +5,7 @@ pipeline {
     jdk "java"
   }
 
-  parameters {
-    string(name: 'container_name', defaultValue: 'pagina_web', description: 'contenedor.')
-    string(name: 'image_name', defaultValue: 'pagina_img', description: 'Nombre de la imagen.')
-    string(name: 'tag_image', defaultValue: 'lts', description: 'Tag de la imagen de la página.')
-    string(name: 'container_port', defaultValue: '80', description: 'Puerto que usa el contenedor')
-  }
-
-
+  stages{
     stage('clone - validate') {
       steps {
         git branch: 'master', url: 'https://github.com/franklinguzr/pruebaJenkins.git'
@@ -67,6 +60,6 @@ pipeline {
         sh 'mvn deploy'
       }
     }
-  
+  }  
 
 }
