--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,8 +9,8 @@ pipeline {
   stages{
     stage('clone - validate') {
       steps {
-        sh 'cd C:/ProgramData/Jenkins/.jenkins/workspace/Ejemplo'
         git branch: 'master', url: 'https://github.com/franklinguzr/pruebaJenkins.git'
+        cd C:/ProgramData/Jenkins/.jenkins/workspace/Ejemplo
         sh 'mvn validate'
       }
     }
